add text on home page, constat field

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -35,8 +35,9 @@
     }
 
     .img-constat {
-        height: 100px;
-        width: auto;
+        height: 30vh;
+        width: 60%;
+        margin-bottom: 40px;
         @include media-breakpoint-up(sm) {
             height: 150px;
         }
