--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -41,21 +41,27 @@
         </div>
 
         <section>
-            <div class="row">
-                <h2 class="primary-title">Le constat</h2>
+            <div class="row text-center">
+                <h2 class="primary-title col-12">Le constat</h2>
+                <p class="col-12">
+                    Il y a dans les Hauts-de-France…
+                </p>
+                <p class="col-12 border-bottom">
+                    Des milliers de téléphones qui trainent dans les tiroirs de notre région
+                </p>
             </div>
             <div class="row justify-content-center">
-                <div class="col col-sm-3 text-center">
+                <div class="col-12 col-sm-3 text-center">
                     <img src="{{ asset('images/constat-1.png') }}"
                          alt="2 téléphones portables en hibernation par personne"
                          class="img-fluid img-constat">
                 </div>
-                <div class="col col-sm-3 text-center">
+                <div class="col-12 col-sm-3 text-center">
                     <img src="{{ asset('images/constat-2.png') }}"
                          alt="115000 étudiants dans la métropole Lilloise"
                          class="img-fluid img-constat">
                 </div>
-                <div class="col col-sm-3 text-center">
+                <div class="col-12 col-sm-3 text-center">
                     <img src="{{ asset('images/constat-3.png') }}"
                          alt="17 incubateurs / accélérateurs de startup dansles Hauts de France"
                          class="img-fluid img-constat">
