--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -104,19 +104,10 @@ a{
 }
 
 .secondary-round-title {
-    font-family: $secondary-font, sans-serif;
-    padding:20px;
-    font-size : 1.1rem;
-    font-weight: 900;
-    text-align : center;
-    background-color: $secondary-color;
-    border-radius: 25px;
-    @include media-breakpoint-up(sm) {
-        font-size: 1.5rem;
-    }
-    @include media-breakpoint-up(md) {
-        font-size : 1.9rem;
-    }
+    border-radius: 10px;
+    background-color: $primary-color;
+    color: #FFFFFF;
+    font-weight: bold;
 }
 
 .estim-round-bubble {
