First phase of estimation, linked to old way

--- a/assets/scss/final_estimation.scss
+++ b/assets/scss/final_estimation.scss
@@ -28,7 +28,7 @@
     h4 {
         margin-top: 10px;
         font-size : 1.3rem;
-        color : $fourth-color;
+        color : $primary-color;
     }
 
     .form-check {
