--- a/templates/estimation/index.html.twig
+++ b/templates/estimation/index.html.twig
@@ -26,7 +26,7 @@
                 {% endfor %}
             </div>
             <div class="row">
-                <div class="col-12 mx-auto text-center form p-4">
+                <div class="col-12 mx-auto text-center p-4">
                     <a class="grey-button" href="{{ path("autres") }}">Autre marque</a>
                 </div>
             </div>
@@ -37,13 +37,13 @@
                 <div class="col-12 text-center p-5">
                     <span class="estim-round-bubble">Quel est le modèle&#8239;?</span>
                 </div>
-                <div class="col-12 text-center p-5" id="patience">
+                <div class="col-12 text-center p-5 patience">
                     {# ici apparait la petite roue qui tourne #}
                 </div>
                 {# ici apparaissent les modèles via le script JS #}
             </div>
             <div class="row">
-                <div class="col-12 mx-auto text-center form p-4">
+                <div class="col-12 mx-auto text-center p-4">
                     <a class="grey-button" href="{{ path("autres") }}">Autre modèle</a>
                 </div>
             </div>
@@ -54,13 +54,13 @@
                 <div class="col-12 text-center p-5">
                     <span class="estim-round-bubble">Quel est la capacité&#8239;?</span>
                 </div>
-                <div class="col-12 text-center p-5" id="patience">
+                <div class="col-12 text-center p-5 patience">
                     {# ici apparait la petite roue qui tourne #}
                 </div>
                 {# ici apparaissent les capacités via le script JS #}
             </div>
             <div class="row">
-                <div class="col-12 mx-auto text-center form p-4">
+                <div class="col-12 mx-auto text-center p-4">
                     <a class="grey-button" href="{{ path("autres") }}">Autre capacité</a>
                 </div>
             </div>
@@ -73,72 +73,81 @@
             "https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
     </script>
     <script>
-        // au clic sur une marque
-        $('.brand').click(function(){
-            // on récupère la marque cliquée
-            const brand = $(this).attr('id');
-            // on affiche un gif de recherche
-            $('#patience').html('<img src="{{ asset('images/ajax-loader.gif') }}">');
-            // ça va chercher les modeles en requête json
-            $.ajax({
-                type: "POST",
-                url: "{{ path('model_id') }}",
-                data: {brand: brand},
-                dataType:"json",
-                success: function(models){
-                    // et ça show le modele
-                    $('#model').show();
-                    // quand on clique ça scrolle vers le bas
-                    $('html,body').animate({scrollTop: $("#model").offset().top}, 'slow');
-                    // si on choisit une autre marque ça vide les modèles précédents
-                    $('#patience').remove();
-                    $('.provisoire').remove();
-                    console.log(models);
-                    $.each(models, function(key, element) {
-                        const json = $.parseJSON(element);
-                        for (let i=0;i<json.length;++i)
-                        {
-                            console.log(json[i].model);
-                            $('#model-js').append('<div class="col-12 col-sm-4 text-center p-2 provisoire">' +
-                                '<p class="grey-button model" id="json[i].model">' + json[i].model + '</p></div>');
-                        }
-                    });
-                },
+        $(document).ready(function(){
+            // au clic sur une marque
+            $('.brand').on('click', function(){
+                // on récupère la marque cliquée
+                const brand = $(this).attr('id');
+                // on affiche un gif de recherche
+                $('.patience').html('<img src="{{ asset('images/ajax-loader.gif') }}">');
+                // ça va chercher les modeles en requête json
+                $.ajax({
+                    type: "POST",
+                    url: "{{ path('model_id') }}",
+                    data: {brand: brand},
+                    dataType:"json",
+                    success: function(models){
+                        // et ça show le modele
+                        $('#model').show();
+                        // quand on clique ça scrolle vers le bas
+                        $('html,body').animate({scrollTop: $("#model").offset().top}, 'slow');
+                        // si on choisit une autre marque ça vide les modèles précédents
+                        $('.patience').remove();
+                        $('.provisoire').remove();
+                        console.log(models);
+                        $.each(models, function(key, element) {
+                            const json = $.parseJSON(element);
+                            for (let i=0;i<json.length;++i)
+                            {
+                                console.log(json[i].model);
+                                $('#model-js').append('<div class="col-12 col-sm-4 text-center p-2 provisoire">' +
+                                    '<a class="grey-button model" id="json[i].model" href="/estimation/' + brand + '/' + json[i].model + '">' + json[i].model + '</a></div>');
+                            }
+                        });
+                    },
+                });
             });
-        });
 
-        // Au clic sur un modèle
-        $('.model').click(function(){
-            $('#capacity').show();
-            // on récupère le modèle cliqué
-            const model = $(this).attr('id');
-            const brand = "Apple"; // TO DO récupérer la marque
-            console.log(model);
-            // on affiche un gif de recherche
-            $('#patience').html('<img src="{{ asset('images/ajax-loader.gif') }}">');
-            // ça va chercher les modeles en requête json
-            $.ajax({
-                type: "POST",
-                url: "{{ path('capacity_id') }}",
-                data: {model: model, brand: brand},
-                dataType:"json",
-                success: function(capacities){
-                    // et ça show le modele
-                    $('#capacity').show();
-                    // quand on clique ça scrolle vers le bas
-                    $('html,body').animate({scrollTop: $("#capacity").offset().top}, 'slow');
-                    // si on choisit un autre modèle ça vide les capacités précédentes
-                    $('#patience').remove();
-                    $('.provisoire').remove();
-                    $.each(capacities, function(key, element) {
-                        const json = $.parseJSON(element);
-                        for (let i=0;i<json.length;++i)
-                        {
-                            $('#capacity-js').append('<div class="col-12 col-sm-4 text-center p-2 provisoire">' +
-                                '<p class="grey-button capacity">' + json[i].capacity + '</p></div>');
-                        }
-                    });
-                },
+            // Au clic sur un modèle
+            $('.model').on('click', function(){
+
+                $('#capacity').show();
+                const model = $(this).attr('id');
+                console.log("clic");
+                console.log(model);
+
+                /*
+                // on récupère le modèle cliqué
+                const model = $(this).attr('id');
+                const brand = "Apple"; // TO DO récupérer la marque
+                console.log(model);
+                // on affiche un gif de recherche
+                $('.patience').html('<img src="{{ asset('images/ajax-loader.gif') }}">');
+                // ça va chercher les modeles en requête json
+                $.ajax({
+                    type: "POST",
+                    url: "{{ path('capacity_id') }}",
+                    data: {model: model, brand: brand},
+                    dataType:"json",
+                    success: function(capacities){
+                        // et ça show le modele
+                        $('#capacity').show();
+                        // quand on clique ça scrolle vers le bas
+                        $('html,body').animate({scrollTop: $("#capacity").offset().top}, 'slow');
+                        // si on choisit un autre modèle ça vide les capacités précédentes
+                        $('.patience').remove();
+                        $('.provisoire').remove();
+                        $.each(capacities, function(key, element) {
+                            const json = $.parseJSON(element);
+                            for (let i=0;i<json.length;++i)
+                            {
+                                $('#capacity-js').append('<div class="col-12 col-sm-4 text-center p-2 provisoire">' +
+                                    '<p class="grey-button capacity">' + json[i].capacity + '</p></div>');
+                            }
+                        });
+                    },
+                });
+                */
             });
         });
     </script>
