--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -10,7 +10,7 @@
     <div class="container p-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h1 class="primary-title">Dernière étape</h1>
+                <h1 class="estim-round-bubble">Dernière étape</h1>
                 <h4 class="text-dark">Modèle : {{ brand }} - {{ model }} - {{ capacity }} Go</h4>
             </div>
         </div>
