add link new boutique on admin page, work on view and backend

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -47,8 +47,7 @@
         }
 
         .img-constat {
-            height: 30vh;
-            width: 50%;
+            height: 150px;
             margin-bottom: 40px;
             @include media-breakpoint-up(sm) {
                 height: 150px;
