--- a/assets/scss/boutique.scss
+++ b/assets/scss/boutique.scss
@@ -8,7 +8,6 @@
 }
 #container{
 
-
     #infoBipbip{
         background-image: url("../images/fond.png");
         font-weight: bold;
@@ -40,6 +39,7 @@
                         border: 1px solid black;
                         border-radius: 10px;
                         padding: 0;
+                        margin-top: 10px;
                     }
                 }
             }
@@ -48,12 +48,19 @@
         #allPhones{
             background-image: url("../images/fond.png");
             .phone{
+                background-color: #FFFFFF;
                 border: 1px solid black;
                 border-radius: 10px;
+                height: 270px;
+
+                figure img{
+                    width: 110px;
+                    height: 110px;
+                }
 
                 .priceContent{
                     position: relative;
-                    top: 13px;
+                    top: 20px;
 
                     .price{
                         border: 1px solid black;
