retouche notre histoire

--- a/templates/home/constat.html.twig
+++ b/templates/home/constat.html.twig
@@ -11,7 +11,7 @@
                  alt="2 téléphones portables en hibernation par personne"
                  class="img-fluid img-constat">
             <p>
-                <span class="accroche_primaire"><span class="mot_cle">XXX</span><br></span> de téléphones en hibernation dans les tiroirs de notre région
+                <span class="accroche_primaire"><span class="mot_cle">12 millions</span><br></span> de téléphones en hibernation dans les tiroirs de notre région
             </p>
         </div>
         <div class="col-12 col-sm-3 text-center">
