--- a/templates/infos/histoire.html.twig
+++ b/templates/infos/histoire.html.twig
@@ -20,12 +20,12 @@
 
     <main class="container">
         <div class="row">
-            <div class="col-12 col-lg-10 col-sm-3 mx-auto form p-4">
+            <div class="col mx-auto form p-4">
                 <div class="d-flex flex-row justify-content-around ">
-                    <div class="col-2 col-lg-2 col-sm-2">
+                    <div class="col-lg-2">
                         <img class="logo" src="{{ asset('images/btn-achete.png') }}" alt="logo">
                     </div>
-                    <div class="text col-6 col-lg-6 text-left col-sm-2">
+                    <div class="text col-6 col-lg-6 text-left">
                         <p>
                             Amener sur Lille des points de collectes de smartphone qui vont permettre de <br>
                             - Faire un geste pour l'environnement <br>
