Correct spelling and center logo BipBip

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,8 +17,8 @@
     {% block header %}
         <header>
             <div class="row pb-3">
-                <div class="col-8 col-md-6 pt-3 text-center">
-                    <a href="{{ path('home') }}" class="logo-title pl-1"><img src="{{ asset('/images/logo-bipbip.png') }}"
+                <div class="col-8 col-sm-12 pt-4 text-center">
+                    <a href="{{ path('home') }}" class="logo-title "><img src="{{ asset('/images/logo-bipbip.png') }}"
                                                                           alt="BipBip ton Green Mobile" /></a>
                 </div>
                 <div class="col-4 col-md-6">
