--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -216,12 +216,15 @@ a{
 header {
     .logo-title {
         img {
-            width: 60%;
+            height: 80px;
             @include media-breakpoint-up(sm) {
-                width: 50%;
+                height: 100px;
             }
-            @include media-breakpoint-up(xl) {
-                width: 40%;
+            @include media-breakpoint-up(md) {
+                height: 120px;
+            }
+            @include media-breakpoint-up(lg) {
+                height: 160px;
             }
         }
     }
