--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,7 +11,7 @@
     <main class="home">
 
         <section>
-            <div class="row justify-content-center p-3">
+            <div class="row justify-content-center pr-3 pl-3">
                 <div class="col col-md-4 text-center">
                     <a href="{{ path('vends') }}">
                         <img src="{{ asset('images/btn-vends.png') }}" alt="Vends ton tél" class="img-fluid img-home">
@@ -162,7 +162,7 @@
                 <div class="col-6 col-sm-7 text-center">
                     <p class="recolted-number pt-2">1520</p>
                     <p class="recolted-text">téléphones<br>collectés<br> par nos
-                        <span class="font-weight-bold">bippers</span>
+                        <span class="font-weight-bold">bipers</span>
                     </p>
                 </div>
             </div>
@@ -189,7 +189,7 @@
                 <div class="col-6 col-sm col-md-3 text-center">
                     <img src="{{ asset('images/logos-profitable.png') }}" alt="Profitable">
                     <p>Profitable</p>
-                    <p class="small-text">Vends, achète et recycle en toute sécurité avec notre partenaire Pumkin</p>
+                    <p class="small-text">Vends, achète et recycle en toute sécurité avec notre partenaire Pumpkin</p>
                 </div>
                 <div class="col-6 col-sm col-md-3 text-center">
                     <img src="{{ asset('images/logos-environnemental.png') }}" alt="Environnemental">
