--- a/templates/infos/histoire.html.twig
+++ b/templates/infos/histoire.html.twig
@@ -8,8 +8,8 @@
 {% endblock %}
 
 {% block body %}
-
-    <div class="title-vends row justify-content-center p-3">
+<main class="home">
+    <div class="title-vends row p-3">
         <img src="{{ asset('/images/bandeauNotreHistoire.png') }}" alt="Notre_histoire">
     </div>
 
@@ -18,14 +18,13 @@
     </div>
 
 
-    <main class="container">
         <div class="row">
-            <div class="col mx-auto form p-4">
+            <div class="col p-2">
                 <div class="d-flex flex-row justify-content-around ">
                     <div class="col-lg-2">
                         <img class="logo" src="{{ asset('images/btn-achete.png') }}" alt="logo">
                     </div>
-                    <div class="text col-6 col-lg-6 text-left">
+                    <div class="text col-8 col-lg-6 text-left">
                         <p>
                             Amener sur Lille des points de collectes de smartphone qui vont permettre de <br>
                             - Faire un geste pour l'environnement <br>
