--- a/templates/infos/histoire.html.twig
+++ b/templates/infos/histoire.html.twig
@@ -9,41 +9,38 @@
 
 {% block body %}
 <main class="home">
-    <div class="title-vends row p-3">
-        <img src="{{ asset('/images/bandeauNotreHistoire.png') }}" alt="Notre_histoire">
+    <div class="title-vends row">
+        <img class="img-fluid" src="{{ asset('/images/bandeauNotreHistoire.png') }}" alt="Notre_histoire">
     </div>
 
-    <div class="col-12 col-lg-8 mx-auto form p-4">
+    <div class="row justify-content-center p-4">
         <img src="{{ asset('images/video.png') }}" alt="video" class="videoNatacha">
     </div>
 
-
         <div class="row">
-            <div class="col p-2">
-                <div class="d-flex flex-row justify-content-around ">
-                    <div class="col-lg-2">
-                        <img class="logo" src="{{ asset('images/btn-achete.png') }}" alt="logo">
-                    </div>
-                    <div class="text col-8 col-lg-6 text-left">
+            <div class="col-12 col-md-4 text-center">
+                <img class="img-fluid" src="{{ asset('images/idee-notrehistoire.png') }}" alt="logo">
+            </div>
+            <div class="col-12 col-md-8 text-justify p-3">
                         <p>
-                            Amener sur Lille des points de collectes de smartphone qui vont permettre de <br>
-                            - Faire un geste pour l'environnement <br>
-                            - Mettre de l'argent facilement dans ta poche grâce à un circuit de distribution avec peu d'intermédiare
+                            Amener sur Lille des points de collectes de smartphone qui vont permettre de: <br>
+                            - Faire un geste pour l'environnement. <br>
+                            - Mettre de l'argent facilement dans ta poche grâce à un circuit de distribution avec peu d'intermédaire.
                             <br>
-                            - Créer de l'emploi régional à l'aide de l'énergie étudiante de la Métropole Lilloise
+                            - Créer de l'emploi régional à l'aide de l'énergie étudiante de la Métropole Lilloise.
                         </p>
                         <p><strong>L'étape suivante : <br></strong>
                             Donner vie à des BipBip mobile en mettant en oeuvre des actions locales ! <br>
                         </p>
-                    </div>
-                </div>
-                <p>Au plus nous collectons de téléphones, plus les prix de nos BipBip mobile pourront être avantageux tout en gardant sa qualité absolue !<br></p>
-                <p>On compte sur toi pour collecter un <strong>MAXIMUM</strong> de téléphones et de mettre la machine en marche!</p>
             </div>
+
+            <div class="col-12">
+                    <p>Au plus nous collectons de téléphones, plus les prix de nos BipBip mobile pourront être avantageux tout en gardant sa qualité absolue !<br></p>
+                    <p>On compte sur toi pour collecter un <strong>MAXIMUM</strong> de téléphones et de mettre la machine en marche!</p>
+            </div>
+        </div>
 
                 {{ include('home/constat.html.twig') }}
 
-        </div>
-        </div>
     </main>
 {% endblock %}
