page notre histoire debug

--- a/templates/infos/histoire.html.twig
+++ b/templates/infos/histoire.html.twig
@@ -12,11 +12,11 @@
     <div class="title-vends row">
         <img class="img-fluid" src="{{ asset('/images/bandeauNotreHistoire.png') }}" alt="Notre_histoire">
     </div>
-
-    <div class="row justify-content-center p-4">
-        <img src="{{ asset('images/video.png') }}" alt="video" class="videoNatacha">
+    <div class="row justify-content-center">
+        <div class="p-4 w-50">
+            <img src="{{ asset('images/video.png') }}" alt="video" class="videoNatacha">
+        </div>
     </div>
-
         <div class="row">
             <div class="col-12 col-md-4 text-center">
                 <img class="img-fluid" src="{{ asset('images/idee-notrehistoire.png') }}" alt="logo">
@@ -34,7 +34,7 @@
                         </p>
             </div>
 
-            <div class="col-12">
+            <div class="col-12 text-justify p-5 ml-5">
                     <p>Au plus nous collectons de téléphones, plus les prix de nos BipBip mobile pourront être avantageux tout en gardant sa qualité absolue !<br></p>
                     <p>On compte sur toi pour collecter un <strong>MAXIMUM</strong> de téléphones et de mettre la machine en marche!</p>
             </div>
