--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -27,15 +27,18 @@
             </div>
         </section>
 
-        <div class="row pl-3 pr-3 pt-3 header">
-            <div class="col-7 p-3 text-center">
+        <div class="row pl-3 pr-3 pt-3 header align-items-center">
+            <div class="col-7 d-md-none p-3 text-center">
                 <img src="{{ asset('images/bipbiprachete.png') }}"
                      alt="BipBip rachète ton tél et en fait le premier mobile recyclé et connecté aux bons plans de ta région"
                      class="img-fluid">
-                {# <h5 class="header-text"><span class="color-primary">BipBip rachète ton tél et en fait</span> le 1<sup>er</sup> mobile recyclé et connecté
-                    <span class="color-third">aux bons plans de ta région</span></h5> #}
             </div>
-            <div class="col-5 p-3">
+            <div class="d-none d-md-block col-md-9 p-3 text-center">
+                <img src="{{ asset('images/bipbiprachete-long.png') }}"
+                     alt="BipBip rachète ton tél et en fait le premier mobile recyclé et connecté aux bons plans de ta région"
+                     class="img-fluid">
+            </div>
+            <div class="col-5 col-md-3 p-3">
                 <img src="{{ asset('images/photo-home.png') }}" alt="BipBip rachète ton tél" class="img-fluid">
             </div>
         </div>
