page notre histoire debug

--- a/templates/infos/bipbip.html.twig
+++ b/templates/infos/bipbip.html.twig
@@ -15,10 +15,10 @@
 
         <div class="row justify-content-center m-4">
             <p>Bipbip est la solution innovante et environnementale pour la région... on te fait un dessin ?</p>
-            <img class="img-fluid" src="{{ asset('images/schema-solution.png') }}" alt="solution">
+            <img class="img-fluid w-75" src="{{ asset('images/schema-solution.png') }}" alt="solution">
         </div>
 
-        <div class="row">
+        <div class="row m-5">
             <div class="col-12 mx-auto text-justify p-3 mt-5">
                 <p>Bip Bip Mobile a pour mission de faire le ménage dans les Hauts-de-France en proposant de recycler tous les téléphones
                     usagés ou inutilisés à l'aide des associations étudiantes qui nous accueillent et nous accompagnent lors des points de collecte.</br>
