--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -17,15 +17,17 @@
                 <section>
                     <div class="row justify-content-center">
                         <h2 class="primary-title">
-                            <span class="blue-arrow">→</span> GO&#8239;! Faire l'estimation&#8239;! <span class="blue-arrow">←</span>
+                            <img class="img-fleche mr-lg-2" src="{{ asset('images/fleche_droite.png') }}" alt="→">
+                            ! Faire l'estimation&#8239;!
+                            <img class="img-fleche mr-lg-2" src="{{ asset('images/fleche_gauche.png') }}" alt="→">
                         </h2>
                     </div>
                     <div class="row justify-content-center p-2 pb-5">
                         <div class="col-4 col-lg-3 text-center">
-                            <p class="small-button">Appli</p>
+                            <p class="primary-button">via l'appli</p>
                         </div>
                         <div class="col-4 col-lg-3 text-center">
-                            <a href="{{ path('new_estimation') }}" class="small-button">Site</a>
+                            <a href="{{ path('new_estimation') }}" class="primary-button">via le site</a>
                         </div>
                     </div>
                 </section>
