page notre solution in notre histoire

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -67,7 +67,7 @@
                                 <ul>
                                     <li class=""><h3 class="font-weight-bold">BipBip</h3></li>
                                     <li><a href="{{ path("histoire") }}" title="Notre histoire" class="primary-title-menu">Notre histoire</a></li>
-                                    <li><a href="{{ path("qui-sommes-nous") }}" title="Notre solution" class="primary-title-menu">Notre solution</a></li>
+                                    <li><a href="{{ "/histoire/#solution" }}" title="Notre solution" class="primary-title-menu">Notre solution</a></li>
                                     <li><a href="{{ path("team") }}" title="Description Bip Bip" class="primary-title-menu">Notre team</a></li>
                                     <li class="pt-3"><h3 class="font-weight-bold">#Je suis BipBip</h3></li>
                                     <li><a href="{{ path("vends") }}" title="Vends ton téléphone" class="primary-title-menu">Vends ton tél</a></li>
