--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -15,19 +15,25 @@
                 </div>
 
                 <section>
-                    <div class="row justify-content-center">
-                        <h2 class="primary-title">
-                            <img class="img-fleche mr-lg-2" src="{{ asset('images/fleche_droite.png') }}" alt="→">
-                            ! Faire l'estimation&#8239;!
-                            <img class="img-fleche mr-lg-2" src="{{ asset('images/fleche_gauche.png') }}" alt="→">
-                        </h2>
-                    </div>
-                    <div class="row justify-content-center p-2 pb-5">
-                        <div class="col-4 col-lg-3 text-center">
-                            <p class="primary-button">via l'appli</p>
+                    <div class="row align-items-center">
+                        <div class="col-12 text-center">
+                            <p class="primary-title">Go, faire l'estimation&#8239;!</p>
                         </div>
-                        <div class="col-4 col-lg-3 text-center">
-                            <a href="{{ path('new_estimation') }}" class="primary-button">via le site</a>
+                        <div class="col-2">
+                            <img class="img-fleche mr-lg-2" src="{{ asset('images/fleche_droite.png') }}" alt="→">
+                        </div>
+                        <div class="col-8">
+                            <div class="row justify-content-center">
+                                <div class="col-12 col-sm-5 text-center">
+                                    <p class="primary-button mb-2">via l'appli</p>
+                                </div>
+                                <div class="col-12 col-sm-5 text-center">
+                                    <a href="{{ path('new_estimation') }}" class="primary-button">via le site</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <img class="img-fleche mr-lg-2" src="{{ asset('images/fleche_gauche.png') }}" alt="→">
                         </div>
                     </div>
                 </section>
